<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#2196F3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ba.unsa.etf.rma.rijad.rmaspirala.DodavanjeKnjigeAkt">

    <ImageView
        android:id="@+id/naslovnaStr"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/imeAutora"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="#90CAF9"
        android:ems="10"
        android:hint="@string/ime_autora"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/naslovnaStr" />

    <Button
        android:id="@+id/dNadjiSliku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/na_i_sliku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazivKnjige" />

    <EditText
        android:id="@+id/nazivKnjige"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="#90CAF9"
        android:ems="10"
        android:hint="@string/naziv_knjige"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imeAutora" />

    <Button
        android:id="@+id/dUpisiKnjigu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/upi_i"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dPonisti"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sKategorijaKnjige" />

    <Button
        android:id="@+id/dPonisti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/poni_ti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dUpisiKnjigu"
        app:layout_constraintTop_toBottomOf="@+id/sKategorijaKnjige" />

    <Spinner
        android:id="@+id/sKategorijaKnjige"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:background="#90CAF9"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/dPonisti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dNadjiSliku"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
