<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    tools:context="ba.unsa.etf.rma.rijad.rmaspirala.KategorijeAkt">

    <Button
        android:id="@+id/dPretraga"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/roundbutton"
        android:text="@string/pretraga"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@+id/tekstPretraga"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/dDodajKategoriju"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundbutton"
        android:text="@string/dodaj_kategoriju"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tekstPretraga" />

    <EditText
        android:id="@+id/tekstPretraga"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="8dp"
        android:background="#E0E0E0"
        android:ems="10"
        android:hint="@string/unesite_kategoriju"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dDodajKnjigu"
        android:layout_width="122dp"
        android:background="@drawable/roundbutton"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:text="@string/dodaj_knjigu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/dDodajKategoriju"
        app:layout_constraintTop_toBottomOf="@+id/dPretraga"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#BDBDBD"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dDodajKnjigu">

        <ListView
            android:id="@+id/listaKategorija"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
